--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <junit.version>4.12</junit.version>
         <!-- mybatis版本号 -->
         <mybatis.version>3.4.2</mybatis.version>
+        <!--shiro版本号-->
+        <shiro.version>1.4.0</shiro.version>
         <org.apache.commons-commons-lang3.version>3.5</org.apache.commons-commons-lang3.version>
 
     </properties>
@@ -176,8 +178,18 @@
 
         <dependency>
             <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-all</artifactId>
-            <version>1.3.2</version>
+            <artifactId>shiro-core</artifactId>
+            <version>${shiro.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>${shiro.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-web</artifactId>
+            <version>${shiro.version}</version>
         </dependency>
         <!--Swagger相关-->
         <dependency>
