--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,15 @@
     <param-value>springmvc.root</param-value>
   </context-param>
 
+  <!--- shiro 1.1，这里名字要与配置文件中的一致 -->
+  <filter>
+    <filter-name>shiroFilter</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>shiroFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 
   <filter>
     <filter-name>SpringEncodingFilter</filter-name>
@@ -61,6 +70,7 @@
     <servlet-name>dispatcherServlet</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+
   <error-page>
     <error-code>404</error-code>
     <location>/WEB-INF/view/err404.jsp</location>
