--- a/pom.xml
+++ b/pom.xml
@@ -234,6 +234,12 @@
             <version>2.8.7</version>
         </dependency>
 
+        <!--jdom解析xml，解析微信返回信息要用到-->
+        <dependency>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>2.0.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
