--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,13 @@
         <org.apache.commons-commons-lang3.version>3.5</org.apache.commons-commons-lang3.version>
 
     </properties>
-
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-solrj</artifactId>
+            <version>5.3.1</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
@@ -34,6 +38,12 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.22</version>
+        </dependency>
+
         <!-- 添加Spring依赖 -->
         <dependency>
             <groupId>org.springframework</groupId>
