更改数据库

--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -1,7 +1,8 @@
 jdbc_driverClassName=com.mysql.jdbc.Driver
-#jdbc_url=jdbc:mysql://139.199.203.170:3306/book?useUnicode=true&characterEncoding=utf8&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull
 #jdbc_url=jdbc:mysql://47.106.107.145:3306/book?useUnicode=true&characterEncoding=utf8&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull
-jdbc_url=jdbc:mysql://47.106.107.145:3306/juduoduo?useUnicode=true&characterEncoding=utf8&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2b8
+#jdbc_url=jdbc:mysql://47.106.107.145:3306/juduoduo?useUnicode=true&characterEncoding=utf8&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2b8
+#陈立的服务器上的mysql
+jdbc_url=jdbc:mysql://47.106.167.38:3306/juduoduo?useUnicode=true&characterEncoding=utf8&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2b8
 #jdbc_url=jdbc:mysql://localhost:3306/book?useUnicode=true&characterEncoding=utf8&useSSL=false&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull
 #jdbc_url=jdbc:mysql://localhost:3306/book??useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc_username=root
